# thefile

./: .contemporary.json  .parlance.json  CMakeLists.txt  README.md  about.cpp  about.h  about.ui  aboutdialog.cpp  aboutdialog.ui  copy.cpp  copy.h  copyjob.cpp  copyjob.h  copyworker.cpp  copyworker.h  driveslist.cpp  driveslist.h  drivesmodel.cpp  drivesmodel.h  filelistwidget.cpp  filelistwidget.h  filesystemmodel.cpp  filesystemmodel.h  filetable.cpp  filetable.h  filetransfers.cpp  filetransfers.h  filetransfers.ui  folderbar.cpp  folderbar.h  forceunmountdialog.cpp  forceunmountdialog.h  forceunmountdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  properties.cpp  properties.h  properties.ui  (+20 more)
application/: CMakeLists.txt  application.pro  com.vicr123.thefile.desktop  com.vicr123.thefile.metainfo.xml  com.vicr123.thefile_blueprint.desktop  com.vicr123.thefile_blueprint.metainfo.xml  defaults.conf  filecolumn.cpp  filecolumn.h  filecolumn.ui  filecolumnaction.h  filecolumnaction.ui  filecolumnfloater.cpp  filecolumnfloater.h  filecolumnfloater.ui  filecolumnmanager.cpp  filecolumnmanager.h  filemodel.cpp  filemodel.h  filetab.cpp  filetab.h  filetab.ui  hiddenfilesproxymodel.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tabbutton.cpp  tabbutton.h  thefile.conf
application/jobs/: burnjob.cpp  burnjob.h  filetransferjob.cpp  filetransferjob.h
application/jobs/widgets/: burnjobprogress.cpp  burnjobprogress.h  burnjobprogress.ui  filetransferjobwidget.cpp  filetransferjobwidget.h  filetransferjobwidget.ui
application/popovers/: burnpopover.cpp  burnpopover.h  burnpopover.ui  deletepermanentlypopover.cpp  deletepermanentlypopover.h  deletepermanentlypopover.ui  itempropertiespopover.cpp  itempropertiespopover.h  itempropertiespopover.ui  unlockencryptedpopover.cpp  unlockencryptedpopover.h  unlockencryptedpopover.ui
application/sidebar/: devicesmodel.cpp  devicesmodel.h  sidebar.cpp  sidebar.h  sidebar.ui
application/translations/: de.qm  de.ts  en_US.ts  he_IL.ts  tr.qm  tr.ts  vi.qm  vi.ts  vi_VN.ts
application/translations/desktop/com.vicr123.thefile/: en.json  tr.json  vi.json
application/translations/desktop/com.vicr123.thefile_blueprint/: en.json
libthefile/: CMakeLists.txt  bookmarkmanager.cpp  bookmarkmanager.h  directory.cpp  directory.h  directoryhandler.cpp  directoryhandler.h  filecolumn.cpp  filecolumn.h  filecolumn.ui  filecolumnaction.cpp  filecolumnaction.h  filecolumnaction.ui  filecolumnfloater.cpp  filecolumnfloater.h  filecolumnfloater.ui  filecolumnmanager.cpp  filecolumnmanager.h  filecolumnwidget.cpp  filecolumnwidget.h  filemodel.cpp  filemodel.h  filetab.cpp  filetab.h  filetab.ui  hiddenfilesproxymodel.cpp  hiddenfilesproxymodel.h  libthefile.pro  libthefileConfig.cmake.in  libthefile_global.h  qt_thefile.pri  resourcemanager.cpp  resourcemanager.h  schemehandler.cpp  schemehandler.h  sidebarmanager.cpp  sidebarmanager.h  thefileplugininterface.h
libthefile/directories/: localfilesystemdirectory.cpp  localfilesystemdirectory.h  trashdirectory.cpp  trashdirectory.h  trashschemehandler.cpp  trashschemehandler.h
libthefile/directoryHandlers/: localfiledirectoryhandler.cpp  localfiledirectoryhandler.h  trashdirectoryhandler.cpp  trashdirectoryhandler.h
libthefile/popovers/: unlockencryptedpopover.cpp  unlockencryptedpopover.h
libthefile/schemeHandlers/: fileschemehandler.cpp  fileschemehandler.h  trashschemehandler.cpp  trashschemehandler.h
libthefile/sidebar/: bookmarksmodel.cpp  bookmarksmodel.h  sidebar.cpp  sidebar.h  sidebar.ui  sidebarsection.cpp  sidebarsection.h  sidebarsectionfactory.cpp  sidebarsectionfactory.h
libthefile/sidebar/sections/: bookmarkssidebarsection.cpp  bookmarkssidebarsection.h  drivessidebarsection.cpp  drivessidebarsection.h  placessidebarsection.cpp  placessidebarsection.h  standardsidebarsectionfactory.cpp  standardsidebarsectionfactory.h
libthefile/translations/: de.qm  de.ts  en_US.ts  vi.qm  vi.ts  vi_VN.ts
plugins/: CMakeLists.txt
plugins/idevice/: CMakeLists.txt  IDevicePlugin.json  abstractidevice.cpp  abstractidevice.h  idevice.cpp  idevice.h  idevicefilecolumnwidget.cpp  idevicefilecolumnwidget.h  idevicefilecolumnwidget.ui  idevicemodel.cpp  idevicemodel.h  idevicewatcher.cpp  idevicewatcher.h  isoftwareupdatefile.cpp  isoftwareupdatefile.h  plugin.cpp  plugin.h  recoveryidevice.cpp  recoveryidevice.h  recoveryidevicewidget.cpp  recoveryidevicewidget.h  recoveryidevicewidget.ui
plugins/idevice/directories/: idevicedirectoryhandler.cpp  idevicedirectoryhandler.h  idevicerootdirectory.cpp  idevicerootdirectory.h  recoveryidevicerootdirectory.cpp  recoveryidevicerootdirectory.h
plugins/idevice/jobs/: idevicerestorejob.cpp  idevicerestorejob.h
plugins/idevice/jobs/progress/: idevicerestorejobprogress.cpp  idevicerestorejobprogress.h  idevicerestorejobprogress.ui
plugins/idevice/popovers/: idevicerestorepopover.cpp  idevicerestorepopover.h  idevicerestorepopover.ui
plugins/idevice/sidebar/: idevicesidebarsection.cpp  idevicesidebarsection.h  idevicesidebarsectionfactory.cpp  idevicesidebarsectionfactory.h
plugins/idevice/translations/: en_US.ts
plugins/qnearbyshare/: CMakeLists.txt  QNearbySharePlugin.json  nearbysharehelppopover.cpp  nearbysharehelppopover.h  nearbysharehelppopover.ui  nearbysharetarget.cpp  nearbysharetarget.h  nearbysharetarget.ui  nearbysharetargetsession.cpp  nearbysharetargetsession.h  nearbysharetargetsession.ui  nearbysharewidget.cpp  nearbysharewidget.h  nearbysharewidget.ui  plugin.cpp  plugin.h
plugins/qnearbyshare/dbus/: nearbysharelistening.cpp  nearbysharelistening.h  nearbysharemanager.cpp  nearbysharemanager.h  nearbysharesession.cpp  nearbysharesession.h  nearbysharetargetdiscovery.cpp  nearbysharetargetdiscovery.h
plugins/qnearbyshare/directories/: nearbysharedirectoryhandler.cpp  nearbysharedirectoryhandler.h  nearbysharerootdirectory.cpp  nearbysharerootdirectory.h
plugins/qnearbyshare/translations/: en_US.ts
transfers/: conflictresolver.cpp  conflictresolver.h  conflictresolver.ui  (+5 more)
(+2 files in other folders)
